# webserver

./: .gitignore  .gitmodules  Cargo.toml  Rocket.toml  build.sh  rdh_concept.md  rhc.md  server_config.ron
blog/: index.md
frontend/: index.html  styles.css
public/: about.rhc  contact.html  contact.rhc  error.rhc  home.html  index.rhc  styles.css  work.rhc
public/inc/: footer.rhc  nav.rhc
public_2/: about.rhc  blog.rhc  error.rhc  home.rhc
public_2/inc/: footer.rhc  head.rhc
src/: concatenator.rs  config.rs  error_catcher.rs  error_handler.rs  file_server.rs  file_util.rs  generator.rs  main.rs  rss.rs  template_engine.rs
