[package]
name = "webserver"
version = "0.2.1"
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
tera = "1.1"
serde = "1.0"
serde_yaml = "0.8"
ron = "0.6"
chrono = { version = "0.4", features = [ "serde" ] }
# Use the alpha 'unflatten' feature of quick-xml
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
dirs = "4"
