[package]
name = "webserver"
version = "0.3.0"
edition = "2018"

[dependencies]
actix-web = "3.3"
actix-files = "0.5"
actix-http = "2"
mime = "0.3"
tera = { version = "1.15", features = [ "builtins" ] }
comrak = "0.12"
serde = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = [ "serde" ] }
# Use the alpha 'unflatten' feature of quick-xml
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
dirs = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'